Kubernetes-daily/Day-3/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: default
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
