Kubernetes-daily/Day-3/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
  namespace: default
spec:
  parentRefs:
  - name: prod
  rules:
  - backendRefs:
    - name: hello-svc
      port: 80
